# finite_cell_isogeometric_structural_application

./: CMakeLists.txt  FiniteCellIsogeometricStructuralApplication.py  finite_cell_isogeometric_structural_application.cpp  finite_cell_isogeometric_structural_application.h
custom_python/: finite_cell_isogeometric_structural_python_application.cpp
